--- a/templates/base.htm
+++ b/templates/base.htm
@@ -16,11 +16,9 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Members <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/m/Andrew Berry">Andrew Berry</a></li>
-                        <li><a href="/m/Josh Gorman">Josh Gorman</a></li>
-                        <li><a href="/m/Blake Rogers">Blake Rogers</a></li>
-                        <li><a href="/m/Aaron Rudevics">Aaron Rudevics</a></li>
-                        <li><a href="/m/Andre Szorkovszky">Andre Szorkovszky</a></li>
+                        {% for member in members %}
+                          <li><a href="/m/{{ member }}">{{ member }}</a></li>
+                        {% endfor %}
                     </ul>
                 </li>
             </ul>
