--- a/templates/statspage.htm
+++ b/templates/statspage.htm
@@ -1,4 +1,8 @@
 {% extends "base.htm" %}
+{% block css %}
+    {{ super() }}
+    <link href="//cdnjs.cloudflare.com/ajax/libs/nvd3/1.1.13-beta/nv.d3.min.css" rel="stylesheet">
+{% endblock %}
 {% block scripts %}
     {{ super() }}
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.9/d3.min.js" charset="utf-8"></script>
