cleanup and index with facebook login button

--- a/templates/base.htm
+++ b/templates/base.htm
@@ -9,6 +9,7 @@
     {% endblock %}
 </head>
 <body>
+    {% block prescripts %}{% endblock %}
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">320 Stats</a>
